# 2026-vanguard-arm-inductions

./: .gitignore  Dockerfile  GUIDE.md  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
assets/task2/: challenge_signal.npy
grading/: README.md  make_challenge.py
src/task1/vanguard_arm/: package.xml  setup.cfg  setup.py
src/task1/vanguard_arm/launch/: display.launch.py
src/task1/vanguard_arm/rviz/: arm.rviz
src/task1/vanguard_arm/urdf/: arm.urdf
src/task1/vanguard_arm/vanguard_arm/: ik_node.py
tasks/task1_arm/: README.md
tasks/task2_kalman/: README.md
tasks/task3_panorama/: README.md
